# startkit-dynamic

./: .gitignore  Astar.h  BaselineSearch.hxx  CMakeLists.txt  Dockerfile  Entry.c  Entry.cpp  Entry.h  LICENSE  Makefile  MapLoader.h  Problem_Definition.md  README.md  ScenarioLoader.cpp  ScenarioLoader.h  Submission_Instruction.md  Timer.cpp  Timer.h  apt.txt  compile.sh  main.cpp
data/: dao_arena2.patch  dao_arena2.scen  switch_sc1_Aurora_TheFrozenSea.patch  switch_sc1_Aurora_TheFrozenSea.scen
gppc/: CMakeLists.txt  Entry.h  GPPC.h  MapLoader.cpp  MapLoader.h  ScenarioLoader.cpp  ScenarioLoader.h  Timer.cpp  Timer.h  main.cpp
gppc/validator/: ValidatePath.hpp  ValidateSerialize.cpp  ValidateSerialize.hpp
src/: Astar.h  Dijkstra.h  Entry.cpp  Entry.h  GPPC.h  Makefile  main.cpp
validator/: Makefile  ValidatePath.hpp  pyValidatePath.cpp
